--- a/template/data/APP.desktop.in
+++ b/template/data/APP.desktop.in
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name={APP.NAME}
-GenericName={APP.GENERIC_NAME}
-Comment={APP.COMMENT}
-Categories={APP.CATEGORIES}
-Exec=com.github.{GITHUB.ORG}.{GITHUB.APP}
-Icon=com.github.{GITHUB.ORG}.{GITHUB.APP}
+Name=My Demo App
+GenericName=Demo
+Comment=Demo app
+Categories=Education
+Exec=com.github.small_tech.demo
+Icon=com.github.small_tech.demo
 Terminal=false
-Keywords={APP.KEYWORDS}
+Keywords=demo;app
 X-GNOME-UsesNotifications=true
